@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998-2012   The R Core Team.
+ *  Copyright (C) 1998-2022   The R Core Team.
  *
  *  This header file is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU Lesser General Public License as published by
@@ -27,14 +27,24 @@
 #ifndef R_EXT_CONSTANTS_H_
 #define R_EXT_CONSTANTS_H_
 
-/* usually in math.h, but not with strict C99 compliance */
+/* usually in math.h, but not with strict C99/C++11 compliance */
 #ifndef M_PI
 #define M_PI 3.141592653589793238462643383279502884197169399375
 #endif
 
+/*
+  S-compatibility defines.
+ */
 #ifndef STRICT_R_HEADERS
 #define PI             M_PI
-#include <float.h>  /* Defines the rest, at least in C99 */
+#ifdef __cplusplus
+#include <cfloat>   /* Defines the RHSs, C++11 and later */
+#else
+#include <float.h>  /* Defines the RHSs, C99 and later */
+#endif
+/*
+  These SINGLE_* defines were deprecated in R 4.2.0.
+ */
 #define SINGLE_EPS     FLT_EPSILON
 #define SINGLE_BASE    FLT_RADIX
 #define SINGLE_XMIN    FLT_MIN
